# Route-Sentinel

./: .security-audit.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: security-audit.md
.github/workflows/: security-audit.yml
endpoint_auth_guard/: analyzer.py  cli.py  config.py  hook_handler.py  scanner.py
endpoint_auth_guard/parsers/: __init__.py  express_parser.py  fastapi_parser.py  spring_parser.py
src/: cli.py  hook_handler.py  reporter.py  scanner.py
src/parsers/: django_parser.py  flask_parser.py
tests/: test_analyzer.py  test_scanner.py
tests/fixtures/: health_check.py  mixed_route.py  protected_route.py  router_level_auth.py  unprotected_route.py
