[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endpoint-auth-guard"
version = "0.1.0"
description = "Detect unprotected API endpoints across FastAPI, Flask, Django, Express, and Spring Boot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Samarth Patel", email = "sammatrix2415@gmail.com" },
]
keywords = ["security", "api", "authentication", "fastapi", "flask", "django", "express", "spring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/samarthpatel24/endpoint-auth-guard"
Repository = "https://github.com/samarthpatel24/endpoint-auth-guard"

[project.scripts]
security-audit = "endpoint_auth_guard.cli:main"

[tool.setuptools.packages.find]
include = ["endpoint_auth_guard*"]
